gcc/testsuite/gcc.c-torture/compile/pr37418-1.c
@@ -1,0 +1,6 @@
+typedef void ft(int);
+void f(int args)__attribute__((noreturn));
+void f2(ft *p __attribute__((noreturn)))
+{
+  p = f;
+}
