gcc/testsuite/gcc.c-torture/compile/pr37418-2.c
@@ -1,0 +1,6 @@
+typedef void ft(int);
+volatile ft f;
+void f2(ft *p __attribute__((noreturn)))
+{
+  p = f;
+}
