gcc/testsuite/gcc.c-torture/compile/pr37418-4.c
@@ -1,0 +1,6 @@
+typedef void ft(int);
+const ft f;
+void f2(ft *p __attribute__((const)))
+{
+  p = f;
+}
